Старница "Одной продажи"

--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -118,7 +118,6 @@
                 <div class="b-ad__item item" data-top-item>
                   <div class="b-ad__item-img">
                     <img src="img/temp/11.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></div>
                   </div>
                   <div class="b-ad__item-info">
 
@@ -137,13 +136,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>20</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item" data-top-item>
                   <div class="b-ad__item-img">
                     <img src="img/temp/12.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -162,13 +161,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>200</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/3.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -184,13 +183,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/4.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -208,13 +207,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>2000</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/6.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -232,13 +231,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/5.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -255,13 +254,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>1500</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/7.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -279,12 +278,12 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>2050</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/3.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -300,13 +299,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/9.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -326,13 +325,13 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>20000</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/6.jpg" alt="">
-                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -350,6 +349,7 @@
                   </div>
                   <p class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
+                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
                   </p>
                 </div>
 
