--- a/www/main.html
+++ b/www/main.html
@@ -205,7 +205,7 @@
                     <div data-name="Блоги">
                       <img src="img/temp/725c0c2s-960.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                    <a href="#" class="text">Как научить Рено Дастер плавать</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_blog">
