--- a/www/my-page.html
+++ b/www/my-page.html
@@ -295,7 +295,7 @@
 
         <div class="row">
           <section class="l-coment col xs-12 sm-9">
-            <div class="block b-coment">
+            <div class="block b-comments">
               <div class="b-coment-wrapp paginator">
                 <h3>Комментарии</h3>
 
