--- a/www/one-ad-page.html
+++ b/www/one-ad-page.html
@@ -101,67 +101,59 @@
         <div class="row">
           <section class="l-one-ad col xs-9">
             <div class="block b-one-ad redact-block">
-              <div class="b-main-title">
-                <h1>Название обьявления</h1>
+              <div class="b-one-ad-top">
+                <p class="b-one-company__tag">
+                  <a href="#" title="Sector" class="text top">Барахолка</a>
+                  <a href="#" title="Sector" class="text top">Ходовая</a>
+                  <a href="#" title="Sector" class="text top">Диски</a>
+                </p>
               </div>
+              <div class="b-main-title">
+                <h1>Продам литые диски OPEL б.у 4шт.R16.</h1>
+
+<!-- "Торг уместный" навесить аттрибут "bargain" -->
+                <div class="b-one-ad__info">
+                  <div class="b-one-ad__info-price text" data-bargain="Торг уместен">
+                    <h3>500$</h3>
+                  </div>
+                </div>
+              </div>
+              
+              <p class="b-one-company__date text subtext">
+                <span>Добавлено: </span>
+                <span>12.10.2016</span>
+              </p>
+
               <a href="add-new-ad.html" class="block-redactor text subtext">Редактировать</a>
-              <p class="b-one-ad__sector text">Раздел: <a href="#" title="Sector">Колесо</a></p>
-              <h3 class="b-one-ad__price">Цена: <span>20$</span></h3>
+
               <img src="" alt="" class="b-one-ad__viewport" id="galleryPhoto">
               <div class="b-one-ad__img-block">
-                <img src="img/temp/56738aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="img/temp/c1c36aes-960.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/market-1.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/market-2.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/market-3.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/market-4.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/market-2.jpg" alt="" class="b-one-ad__img-item galleryThumb">
               </div>
-              <p class="b-one-ad__about text">колеса в сборе(родные)резина Danlop диски R19 Nissan откатали 2 сезона, на одном диске царапки(на фото видно).Узнавайте, звоните, пишите на почту, договоримся.Комплект норм.еще поездит.</p>
-              <p class="b-one-ad__contact m-one-ad__contact_telephone lead">Telephone: <a href="tel:+302105241296">+30 21 0524 1296</span></a></p>
-              <p class="b-one-ad__contact m-one-ad__contact_email lead">Email: <a href="mailto:email@email.com?subject=feedback">email@email.com</a></p>
-
-              <form action="one-ad-page_submit" method="get" accept-charset="utf-8" class="b-one-ad__form">
-                <h4>Написать сообщение продавцу</h4>
-                <div class="b-form-item m-form-item_textarea m-form-item-inline">
-                  <p><textarea rows="4" cols="60" name="hobby" class="text tab-input"></textarea></p>
-                </div>
-                <input type="submit" value="Отправить" class="button submit-button big tab-input"></input>
-              </form>
+              <p class="b-one-ad__about text">Комплект легкосплавных дисков R16 5х110 для Opel Omega B/Opel Vectra В/C, ОТПРАВКА В ДЕНЬ ЗАКАЗА, НОВАЯ ПОЧТА, ИНТАЙМ, ДЕЛИВЕРИ, есть все запчасти по даному авто, разборка опель,без резины цена дисков 4000 грн</p>
             </div>
           </section>
-          <div class="b-message-confirm" style="display: none;">
-            <div class="b-popup-message-close"></div>
-            <h3>Сообщение отправлено</h3>
-          </div>
-          <section class="l-similar col xs-3">
-            <div class="block b-similar">
-              <h3><span>100</span> похожих</h3>
-              <h4><a href="#"><span>10</span> новых</a></h4>
-              <div class="b-similar__wrapp">
-                <div class="b-similar__item">
-                  <img src="img/temp/img-previous-2.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text">Тема обьявления 1</a>
-                </div>
-                <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text">Тема обьявления 2</a>
-                </div>
-                <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text">Тема обьявления 2</a>
-                </div>
-                <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text">Тема обьявления 2</a>
-                </div>
-                <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text">Тема обьявления 2</a>
-                </div>
+          <section class="l-contact col xs-3">
+            <div class="block b-contact">
+              <p class="text bold">Свяжитесь с продавцом</p>
+
+              <div class="b-contact__saler">
+                <img src="img/temp/author/3.jpg" alt="Продавец" class="b-contact__saler-photo">
+                <p class="b-contact__saler-name text bold"><a href="my-page.html" title="">Leonidis Castonedis</a></p>
+                <p class="b-contact__saler-city text">Lamia</p>
+                <h5 class="b-contact__saler-tel"><a href="tel:+302105241296" title="Telephone">+30 21 0524 1296</a></h5>
+                <h5 class="b-contact__saler-email" ><a href="mailto:email@email.com?subject=feedback"title="E-mail">email@email.com</a></h5>
               </div>
+
+              <p class="text bold"><a href="#" title="Другие обьявления">Другие обьявления автора</a></p>
             </div>
           </section>
         </div>
+      </div>
 
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
       <script type="text/javascript" src="js/script-one-ad.js"></script>
