--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -107,7 +107,7 @@
             <div class="block b-one-company">
               <div class=" b-one-company__title">
                 <div class="b-one-company__title-note">
-                  <p class="b-one-company__tag text subtext"><a href="#" title="Sector">Мойки</a></p>
+                  <p class="b-one-company__tag text subtext"><a href="#" title="Sector" class="tag">Мойки</a></p>
                   <h1 id="nameCompany">Рога и копыта</h1>
                   <span class="b-one-company__rating">2335</span>
                   <p class="b-one-company__short-about lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorem eius deserunt libero distinctio, iusto illum repellendus commodi unde, dolores facere repudiandae. Nisi unde blanditiis sunt porro officiis, nostrum et!</p>
@@ -218,27 +218,27 @@
 
           <section class="l-similar col xs-3">
             <div class="block b-similar">
-              <h3><span>100</span> похожих компаний</h3>
+              <h4><span>100</span> похожих компаний</h4>
               <div class="b-similar__wrapp">
                 <div class="b-similar__item">
-                  <img src="img/temp/img-previous-2.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text" data-clamp>Name company 1</a>
+                  <img src="img/temp/logo-company/2.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text" data-clamp>4точки - интернет-магазин по продаже шин и дисков - 4tochki</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text" data-clamp>Name company 2</a>
+                  <img src="img/temp/logo-company/1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text" data-clamp>Re-Stylin</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text" data-clamp>Name company 2</a>
+                  <img src="img/temp/logo-company/logo-comp3.png" alt="" class="b-similar__item-img">
+                  <a href="#" class="text" data-clamp>AIMOL PREMIUM MOTOROILS</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text" data-clamp>Name company 2</a>
+                  <img src="img/temp/logo-company/2.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text" data-clamp>4точки - интернет-магазин по продаже шин и дисков - 4tochki</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
-                  <a href="#" class="text" data-clamp>Name company 2</a>
+                  <img src="img/temp/logo-company/1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text" data-clamp>Re-Stylin</a>
                 </div>
               </div>
             </div>
