--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -167,8 +167,12 @@
                 <a href="" class="b-social-item m-social-item_tw"></a>
                 <a href="" class="b-social-item m-social-item_gm"></a>
               </div>
+            </div>
 
-              <div class="b-comments">
+            <div class="block b-comments">
+              <div class="b-coment-wrapp paginator">
+                <h3>Комментарии</h3>
+
                 <div class="alert-register">
                   <h5>Участвовать в обсуждениях могут только зарегистрированные пользователи.</h5>
                   <p class="alert-register__buttons">
@@ -221,9 +225,9 @@
                   <span class="b-company__pagination-item item text">4</span>
                   <span class="b-company__pagination-item item text m-pagination-item_next">>></span>
                 </div>
+                
               </div>
             </div>
-
           </section>
 
         <!-- Реклама -->
@@ -238,7 +242,7 @@
             </div>
           </section>
 
-        </div>
+      </div>
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
       <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0dzIKLNt22A8WoTU7GojHwlhNR_dAaxI"></script>
       <script type="text/javascript" src="js/script-one-item-news.js"></script>
